update payment type on swagger documentation
